--- a/my_res/package.json
+++ b/my_res/package.json
@@ -9,10 +9,13 @@
   "dependencies": {
     "@popperjs/core": "^2.10.2",
     "aos": "^2.3.4",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.1",
     "bootstrap-input-spinner": "^3.1.7",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "portal-vue": "^2.1.7",
+    "vue": "^3.2.20",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
