--- a/my_res/package.json
+++ b/my_res/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@popperjs/core": "^2.10.2",
     "aos": "^2.3.4",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.1",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
