--- a/my_res/package.json
+++ b/my_res/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.6.1",
     "bootstrap-input-spinner": "^3.1.7",
     "core-js": "^3.6.5",
+    "firebase": "^9.3.0",
     "mitt": "^3.0.0",
     "portal-vue": "^2.1.7",
     "vue": "^3.2.20",
