--- a/my_res/package.json
+++ b/my_res/package.json
@@ -18,7 +18,7 @@
     "portal-vue": "^2.1.7",
     "vue": "^3.2.20",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.0-0"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
