--- a/my_res/package.json
+++ b/my_res/package.json
@@ -16,7 +16,8 @@
     "mitt": "^3.0.0",
     "vue": "^3.2.20",
     "vue-router": "^4.0.0-0",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
